[package]
name = "repeated_sd_writes"
version = "0.1.0"
authors = ["Thierry61"]


[dependencies]
num = "~0.1.31"
log = "~0.3.5"
docopt = "~0.6.78"
rand = "~0.3.14"
sodiumoxide = "~0.0.10"
self_encryption = "~0.3.0"
rustc-serialize = "~0.3.19"
routing = "~0.12.0"
safe_core = "~0.13.1"
maidsafe_utilities = "~0.5.1"
xor_name = "~0.1.0"
kademlia_routing_table = "~0.4.0"
